--- a/index.html
+++ b/index.html
@@ -4,9 +4,114 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="style.css">
-    <title>CV2. HTML, CSS, Git Basics</title>
+    <link rel="icon" href="assets/img/favicon.ico">
+    <title>CV</title>
 </head>
 <body>
-    <h1>test test test</h1>
+<header class="header">
+    <div class="container header-container">
+        <nav class="nav">
+            <ul class="nav-list">
+                <li class="nav-item"><a href="#info" class="nav-link">Info</a></li>
+                <li class="nav-item"><a href="#summary" class="nav-link">About me</a></li>
+                <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
+                <li class="nav-item"><a href="#code" class="nav-link">Code example</a></li>
+                <li class="nav-item"><a href="#experience" class="nav-link">Experience</a></li>
+                <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
+                <li class="nav-item"><a href="#courses" class="nav-link">Courses</a></li>
+                <li class="nav-item"><a href="#languages" class="nav-link">Languages</a></li>
+            </ul>
+      </nav>
+    </div>
+</footer>
+
+<main class="main">
+    <div class="container profile-container">
+    <div class="profile">
+        <div class="profile-foto">
+            <img src="assets/img/avatar.png" class="avatar" alt="avatar">
+        </div>
+        <div class="profile-info">
+            <h1 class="my-name">Kirill Korobitsyn</h1>
+            <h3 class="profession">Junior Frontend Developer</h3>
+        </div>
+    </div>
+    </div>
+    <div class="container main-container">
+    <div class="info section" id="info">
+        <h2 class="profile-item">Info:</h2>
+        <ul class="info-list">
+            <li class="info-item">Phone: +79116766306</li>
+            <li class="info-item">E-mail: <a href="mailto:kirkor313@mail.ru" title="email">kirkor313@mail.ru</a></li>
+            <li class="info-item">GitHub: <a href="https://github.com/kirkor313" title="github">kirkor313</a></li>
+            <li class="info-item">Location: <a href="https://www.google.com/maps/d/viewer?mid=1VKOqyzp8j8ip9SVMSntG9E-VoyA&hl=en&ll=64.551111%2C40.57416700000001&z=17" title="maps">Russia, Arkhangelsk</a></li>
+        </ul>
+    </div>
+
+    <div class="summary section" id="summary">
+        <h2 class="profile-item">About me:</h2>
+        <p>I am 32 years old. I work in the energy sector in a network organization. in the position of the master of the site . I started studying frontend development as a hobby, but now it has completely captivated me. I strive to study this direction as qualitatively as possible in order to devote myself to it.</p>
+    </div>
+
+    <div class="skills section" id="skills">
+        <h2 class="profile-item">Skills:</h2>
+        <ul class="skills-list">
+            <li class="skills-item">HTML</li>
+            <li class="skills-item">CSS</li>
+            <li class="skills-item">JS (basic)</li>
+            <li class="skills-item">Git</li> 
+        </ul>
+    </div>
+
+    <div class="code section" id="code">
+        <h2 class="profile-item">Code example:</h2>
+
+        <p>
+           <pre><code> 
+        function makeNegative(num) { <br> 
+            if ( num > 0 ) { return -num; } <br>
+                else { return num; } <br>
+            } <br>
+            </code></pre>
+        </p>
+    </div>
+
+    <div class="experience section" id="experience">
+        <h2 class="profile-item">Experience:</h2>
+        <ul class="experience-list"> 
+            <li class="experience-item"><a href="https://github.com/rolling-scopes-school/tasks/blob/master/tasks/cv/git-markdown.md" title="cv1">CV#1. Markdown & GitHub</a></li>
+            <li class="experience-item"><a href="https://github.com/rolling-scopes-school/tasks/blob/master/tasks/cv/html-css-git.md" title="cv2">CV#2. HTML, CSS & Git Basics</a></li>
+        </ul>
+    </div>
+
+    <div class="education section" id="education">
+        <h2 class="profile-item">Education:</h2> 
+        <p><a href="https://www.sut.ru" title="sut">The Bonch-Bruevich Saint Petersburg State University of Telecommunications. Bachelor of Communications.</a></p>
+    </div>
+
+    <div class="courses section" id="courses">
+        <h2 class="profile-item">Courses:</h2>
+        <ul class="courses-list">
+            <li class="courses-item">HTML Academy.</li>
+            <li class="courses-item">HTML, CSS, JS, Git video courses on YouTube.</li>
+        </ul>
+    </div>
+
+    <div class="languages section" id="languages">
+        <h2 class="profile-item">Languages:</h2>
+        <ul class="languges-list">
+            <li class="languages-item">Russian - native speaker.</li>
+            <li class="languages-item">English - A2</li>
+        </ul>
+    </div>
+    </div>
+</main>
+
+<footer class="footer">
+    <div class="container footer-container">
+       <div class="footer-title"> © 2022 <a href="https://github.com/kirkor313" class="github nav-link">kirkor313</a></div>
+        <div class="footer-logo"><a href="https://rs.school/js/" class="rss" ><img src="assets/img/ rss.png" class="rss-logo" alt="rss-logo"></a></div>
+    </div>
+</footer>
 </body>
 </html>
