fix: fix bugs in index.html file

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -23,7 +24,7 @@
             </ul>
       </nav>
     </div>
-</footer>
+</header>
 
 <main class="main">
     <div class="container profile-container">
@@ -66,14 +67,12 @@
     <div class="code section" id="code">
         <h2 class="profile-item">Code example:</h2>
 
-        <p>
-           <pre><code> 
-        function makeNegative(num) { <br> 
-            if ( num > 0 ) { return -num; } <br>
-                else { return num; } <br>
+        <p><pre><code> 
+            function makeNegative(num) { <br> 
+                if ( num > 0 ) { return -num; } <br>
+                    else { return num; } <br>
             } <br>
-            </code></pre>
-        </p>
+            </code></pre></p>
     </div>
 
     <div class="experience section" id="experience">
@@ -110,7 +109,7 @@
 <footer class="footer">
     <div class="container footer-container">
        <div class="footer-title"> © 2022 <a href="https://github.com/kirkor313" class="github nav-link">kirkor313</a></div>
-        <div class="footer-logo"><a href="https://rs.school/js/" class="rss" ><img src="assets/img/ rss.png" class="rss-logo" alt="rss-logo"></a></div>
+        <div class="footer-logo"><a href="https://rs.school/js/" class="rss" ><img src="assets/img/rss.png" class="rss-logo" alt="rss-logo"></a></div>
     </div>
 </footer>
 </body>
