fix: fix code section in index.html

--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
     <div class="code section" id="code">
         <h2 class="profile-item">Code example:</h2>
 
-        <p><pre><code> 
+        <pre><code> 
             function makeNegative(num) { <br> 
                 if ( num > 0 ) { return -num; } <br>
                     else { return num; } <br>
             } <br>
-            </code></pre></p>
+        </code></pre>
     </div>
 
     <div class="experience section" id="experience">
