fix: encode raw symbol

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
     <div class="experience section" id="experience">
         <h2 class="profile-item">Experience:</h2>
         <ul class="experience-list">
-            <li class="experience-item"><a href="https://github.com/rolling-scopes-school/tasks/blob/master/tasks/cv/git-markdown.md" title="cv1">CV#1. Markdown & GitHub</a></li>
-            <li class="experience-item"><a href="https://github.com/rolling-scopes-school/tasks/blob/master/tasks/cv/html-css-git.md" title="cv2">CV#2. HTML, CSS & Git Basics</a></li>
+            <li class="experience-item"><a href="https://github.com/rolling-scopes-school/tasks/blob/master/tasks/cv/git-markdown.md" title="cv1">CV#1. Markdown and GitHub</a></li>
+            <li class="experience-item"><a href="https://github.com/rolling-scopes-school/tasks/blob/master/tasks/cv/html-css-git.md" title="cv2">CV#2. HTML, CSS and Git Basics</a></li>
         </ul>
     </div>
     <div class="education section" id="education">
@@ -99,7 +99,7 @@
 <footer class="footer">
     <div class="container footer-container">
        <div class="footer-title"> © 2022 <a href="https://github.com/kirkor313" class="github nav-link">kirkor313</a></div>
-        <div class="footer-logo"><a href="https://rs.school/js/" class="rss" ><img src="assets/img/rss.png" class="rss-logo" alt="rss-logo"></a></div>
+        <div class="footer-logo"><a href="https://rs.school/js/" class="rss"><img src="assets/img/rss.png" class="rss-logo" alt="rss-logo"></a></div>
     </div>
 </footer>
 </body>
