fix: encode raw symbol

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <h2 class="profile-item">Code example:</h2>
         <pre><code>
             function makeNegative(num) { <br>
-                if ( num > 0 ) { return -num; } <br>
+                if ( num &gt; 0 ) { return -num; } <br>
                     else { return num; } <br>
             } <br>
         </code></pre>
